--- a/src/galeria.html
+++ b/src/galeria.html
@@ -19,7 +19,7 @@
         <nav class="menu">
            <ul>
              <li><a class="activo" href="index.html">FANPAGE</a></li>
-             <li><a class="activo" href="galeria.html">galeria</a></li>
+             <li><a  href="galeria.html">galeria</a></li>
              <li><a href="curiosidades.html">curiosidades</a></li>
            </ul>    
         </nav>
